objects/ssot__CompliancePolicyClause__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CommentsText__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CompliancePolicyId__c</fullName>
        <label>Compliance Policy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Compliance Policy Clause Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentCompliancePolicyClauseId__c</fullName>
        <label>Parent Compliance Policy Clause</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752762776865_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CompliancePolicyClause_CompliancePol_rel</label>
        <referenceTo>ssot__CompliancePolicy__dlm</referenceTo>
        <relationshipLabel>CompliancePolicyClause_CompliancePol_rel</relationshipLabel>
        <relationshipName>rel_1752762776865_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752762785207_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CompliancePolicyClause_ParentComplia_rel</label>
        <referenceTo>ssot__CompliancePolicyClause__dlm</referenceTo>
        <relationshipLabel>CompliancePolicyClause_ParentComplia_rel</relationshipLabel>
        <relationshipName>rel_1752762785207_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>